Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -492,6 +492,91 @@
               <p>24 Items</p>
             </a>
           </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="SPICES">
+              </div>
+              <h2>SPICES</h2>
+              <p>38 Items</p>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="GRAINS">
+              </div>
+              <h2>GRAINS</h2>
+              <p>38 Items</p>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="OILS">
+              </div>
+              <h2>OILS</h2>
+              <p>5 Items</p>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="NUTS">
+              </div>
+              <h2>NUTS</h2>
+              <p>15 Items</p>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="BEVERAGES_TEAS">
+              </div>
+              <h2>BEVERAGES_TEAS</h2>
+              <p>15 Items</p>
+            </a>
+          </div>
+
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="CEREAL">
+              </div>
+              <h2>CEREAL</h2>
+              <p>15 Items</p>
+            </a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  alt="FRUITS">
+              </div>
+              <h2>FRUITS</h2>
+              <p>15 Items</p> 
+            </a>
+          </div>
         </div>
       </div>
     </div>
