--- a/shop8nuts.html
+++ b/shop8nuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MEAT AND FISH/FISH</title>
+    <title>NUTS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
@@ -230,7 +230,7 @@
                   <div class="shop-products_top mini-tab-title underline">
                     <div class="row align-items-center">
                       <div class="col-6 col-xl-4">
-                        <h2 class="title">MEAT AND FISH/FISH</h2>
+                        <h2 class="title">NUTS</h2>
                       </div>
                       
                       <div class="col-12 col-xl-8">
@@ -246,7 +246,7 @@
                     <!--Using column-->
                   </div>
                   <div class="shop-products_bottom">              
-                        <div id="root6" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
+                        <div id="root10" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
 
                         </div>
