Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -494,10 +494,10 @@
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop6spices.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FSalt.jpeg?alt=media&token=21c449c2-d653-4ae2-9c32-90c394621eee"
                   alt="SPICES">
               </div>
               <h2>SPICES</h2>
@@ -506,22 +506,22 @@
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop5grains.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FRice%20krispies.jpg?alt=media&token=10939f14-c187-4978-82af-ac8244ee8da1"
                   alt="GRAINS">
               </div>
               <h2>GRAINS</h2>
-              <p>38 Items</p>
+              <p>5 Items</p>
             </a>
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop7oil.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FMilo%20crunches%20.jpg?alt=media&token=d58d5258-0cd1-4fc9-82d1-891ec45ca341"
                   alt="OILS">
               </div>
               <h2>OILS</h2>
@@ -530,44 +530,44 @@
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop8nuts.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCocoa%20powder.jpg?alt=media&token=559bf635-aeed-4dff-be67-b67071c4b4c3"
                   alt="NUTS">
               </div>
               <h2>NUTS</h2>
-              <p>15 Items</p>
+              <p>10 Items</p>
             </a>
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop11beveragetea.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCocoa%20powder%202.jpg?alt=media&token=2c7df920-971d-4259-9258-197d62653291"
                   alt="BEVERAGES_TEAS">
               </div>
               <h2>BEVERAGES_TEAS</h2>
-              <p>15 Items</p>
+              <p>12 Items</p>
             </a>
           </div>
 
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop10Cereal.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCoco%20pops.jpg?alt=media&token=ab74e90c-4cf8-4c1d-869b-47d88e3920df"
                   alt="CEREAL">
               </div>
               <h2>CEREAL</h2>
-              <p>15 Items</p>
+              <p>8 Items</p>
             </a>
           </div>
 
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop9fruits.html">
               <div class="categories-img">
                 <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
