Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop6spices.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FSalt.jpeg?alt=media&token=21c449c2-d653-4ae2-9c32-90c394621eee"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FMaggi.jpg?alt=media&token=a4d825db-e853-4df9-b977-31e67fa9e8c5"
                   alt="SPICES">
               </div>
               <h2>SPICES</h2>
@@ -545,7 +545,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop11beveragetea.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCocoa%20powder%202.jpg?alt=media&token=2c7df920-971d-4259-9258-197d62653291"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FLipton.jpg?alt=media&token=1bb64dd6-8b11-40aa-9fde-2a8164bdce5f"
                   alt="BEVERAGES_TEAS">
               </div>
               <h2>BEVERAGES_TEAS</h2>
@@ -558,7 +558,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop10Cereal.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCoco%20pops.jpg?alt=media&token=ab74e90c-4cf8-4c1d-869b-47d88e3920df"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FGolden%20morn%20.jpg?alt=media&token=89bab744-e4ee-400d-a76a-0d156e9419d2"
                   alt="CEREAL">
               </div>
               <h2>CEREAL</h2>
@@ -570,7 +570,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop9fruits.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FGreen%20pepper%202.jpg?alt=media&token=1eae3d08-6927-4001-8aca-28a2abd46c37"
                   alt="FRUITS">
               </div>
               <h2>FRUITS</h2>
