--- a/shop6spices.html
+++ b/shop6spices.html
@@ -349,7 +349,7 @@
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <script type="text/javascript" src="assets/categoryQuery/categoryspices"></script>
+    <script type="text/javascript" src="assets/categoryQuery/categoryspices.js"></script>
    
 
 
