Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop4.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCat%20fish%202.jpg?alt=media&token=45ab4c02-4c40-4e87-b35e-aa42b9047de4"
+                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FLiver.jpg?alt=media&token=f48d7dd5-dea4-466e-a7b6-666c85ccca9c"
                   alt="MEAT AND FISH/FISH">
               </div>
               <h2>MEAT AND FISH/FISH</h2>
@@ -501,7 +501,7 @@
                   alt="SPICES">
               </div>
               <h2>SPICES</h2>
-              <p>38 Items</p>
+              <p>11 Items</p>
             </a>
           </div>
 
