Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop7oil.html">
               <div class="categories-img">
                 <img
-                  src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FMilo%20crunches%20.jpg?alt=media&token=d58d5258-0cd1-4fc9-82d1-891ec45ca341"
+                  src="assets/images/homepage01/slider_img_1ab.png"
                   alt="OILS">
               </div>
               <h2>OILS</h2>
