--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
-                    <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s" data-ride="carousel"><img
+                    <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
                         src="assets/images/homepage01/slider_img_1abc.png" alt="">
                     </div>
@@ -332,7 +332,7 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
-                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s" data-ride="carousel"><img
+                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
                         src="assets/images/homepage01/slider_img_2.png" alt="">
                     </div>
@@ -351,7 +351,7 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
-                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s" data-ride="carousel"><img
+                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
                         src="assets/images/homepage01/slider_img_1abcd.png" alt="">
                     </div>
@@ -371,7 +371,7 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
-                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s" data-ride="carousel"><img
+                        <div class="slider-img carousel slide" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img rad"
                         src="assets/images/homepage01/slider_img_1abcde.png" alt="">
 
@@ -582,31 +582,6 @@
     </div>
     <!-- End items-category-->
 
-    <!-- SLIDER-CSS-START 
-    <div id="dvslider" class="carousel slide" data-ride="carousel">
-        <!-The slideshow -->
-        <!--<div class="carousel-inner">
-          <div class="carousel-item  active ">
-            <img src="assets/images/5f6ccf273f51f.jpg" alt="Los Angeles">
-          </div>
-          <div class="carousel-item ">
-            <img src="assets/images/5f6ccf3610a1c.jpg" alt="Los Angeles">
-          </div>
-          <div class="carousel-item ">
-            <img src="assets/images/5f6ccf42c3782.jpg" alt="Los Angeles">
-          </div>
-       
-
-        Left and right controls 
-        <a class="carousel-control-prev" href="#dvslider" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#dvslider" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-
-    </div>
-     SLIDER-CSS-END -->
 
     <div class="deal-of-week">
       <div class="container">
