Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <link rel='stylesheet' href="assets/css/owl.theme.default.css">
   <link rel="stylesheet" href="assets/css/jquery.bxslider.css">
 
+
+        
+
 </head>
 
 <body>
@@ -253,6 +256,37 @@
             </div>
           </div>
         </nav>
+
+
+        <!--SLIDESHOW-->
+        <!--
+        <div class="slider">
+          <img class="mySlides" src="assets/images/homepage01/slider_img_1abcd.png" style="width:70%">
+          <img class="mySlides" src="assets/images/homepage01/slider_img_1abc.png" style="width:70%">
+          <img class="mySlides" src="assets/images/homepage01/slider_img_1ab.png" style="width:70%">
+          <img class="mySlides" src="assets/images/homepage01/slider_img_1a.png" style="width:70%">
+
+          <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+          <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+        </div>
+
+        <script>
+        var slideIndex = 0;
+        carousel();
+
+        function carousel() {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+          }
+          slideIndex++;
+          if (slideIndex > x.length) {slideIndex = 1}
+          x[slideIndex-1].style.display = "block";
+          setTimeout(carousel, 5000); // Change image every 2 seconds
+        }
+        </script> -->
+
       </div>
     </header>
     
