checkout : added paystack

--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -231,7 +231,7 @@
                     <div class="col-sm-9">
                       <div class="input-group">
                         <div class="input-group-addon">&#x20a6;</div>
-                        <input class="form-control" id="amount-in-naira" required="required" type="number" step="100" placeholder="Amount" />
+                        <input class="form-control no-round-input-bg" id="amount-in-naira" required="required" type="number" step="100" placeholder="Amount" />
                         <div class="input-group-addon">.00</div>
                       </div>
                     </div>
