checkout : added paystack

--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -155,6 +155,7 @@
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -213,13 +214,13 @@
                     </div>
                   </fieldset>
                   <fieldset class="form-group row">
-                    <label class="col-sm-3" for="lastname">Last Name</label>
+                    <label class="col-sm-3" for="lastname">Last Name *</label>
                     <div class=" col-sm-9">
                       <input class="form-control no-round-input-bg" id="lastname" type="text" placeholder="Your Last name (optional)" />
                     </div>
                   </fieldset>
                   <fieldset class="form-group row">
-                    <label class="col-sm-3" for="email">Email Address</label>
+                    <label class="col-sm-3" for="email">Email Address *</label>
                     <div class=" col-sm-9">
                       <input class="form-control no-round-input-bg" id="email" required="required" type="email" placeholder="Your Email Address" />
                     </div>
@@ -236,7 +237,9 @@
                       </div>
                     </div>
                   </fieldset>
-                  <p class="text-center" id="static-amount">You are paying: <span id="amountinngn">0</span> naira</p>
+                  <div id="cartTotalPaystack">
+                    <!--<p class="text-center" id="static-amount">You are paying: <span id="amountinngn">0</span> naira</p>-->
+                  </div>
                   <fieldset class="form-group row">
                     <div class="col-sm-offset-3 col-sm-9">
                       <button class="no-round-btn black cart-update" type="button" onclick="validateAndPay()"> Pay </button>
