checkout : added paystack

--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -201,7 +201,7 @@
 
             <div class="container">
               <div class="jumbotron">
-                <h4 class="text-center title mx-auto">Make payment with Paystack</h4>
+                <h4 class="text-center title mx-auto">Make payment with Paystack <img src="/assets/images/paystack.png" height="25%" width="45"></h4>
                 <form class="form" id="pay-form">
                   <div id="alert-holder"></div>
                   <div class="text-center">
