--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -240,7 +240,7 @@
                   <div id="cartTotalPaystack">
                     <!--<p class="text-center" id="static-amount">You are paying: <span id="amountinngn">0</span> naira</p>-->
                   </div>
-                  <fieldset class="form-group row">
+                  <fieldset class="form-group row text-center">
                     <div class="col-sm-offset-3 col-sm-9">
                       <button class="no-round-btn black cart-update" type="button" onclick="validateAndPay()"> Pay </button>
                     </div>
