checkout : added paystack

--- a/shop11beveragetea.html
+++ b/shop11beveragetea.html
@@ -246,7 +246,7 @@
                     <!--Using column-->
                   </div>
                   <div class="shop-products_bottom">              
-                        <div id="root13" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
+                        <div id="featuredProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
 
                         </div>
