--- a/shop3.html
+++ b/shop3.html
@@ -245,7 +245,7 @@
                     <!--Using column-->
                   </div>
                   <div class="shop-products_bottom">              
-                    <div id="root5" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
+                    <div id="featuredProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
 
                     </div>
