--- a/shop1.html
+++ b/shop1.html
@@ -347,7 +347,23 @@
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
 
+
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+
+    <!-- Utils -->
+    <script src="js/utils/api-request.js"></script>
+
+    <!-- App Logic -->
+    <script src="js/app.js"></script>
+
+
+
+
+
     <script type="text/javascript" src="assets/categoryQuery/Queryfoodlistingbycatgory1.js"></script>
+
    
 
 
