--- a/shop2.html
+++ b/shop2.html
@@ -352,6 +352,17 @@
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
 
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+
+    <!-- Utils -->
+    <script src="js/utils/api-request.js"></script>
+
+    <!-- App Logic -->
+    <script src="js/app.js"></script>
+
+
     <script type="text/javascript" src="assets/categoryQuery/Queryfoodlistingbycatgory2.js"></script>
    
 
