checkout : added paystack

--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
                     </ul>
                   </div>
                   <div class="mobile-login" id="mobilelogin">
-                    <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
+                    <h2>Dashboard</h2>
+                    <h2>My account</h2>
+                    <a href="login.html">Login</a><a href="register.html">Register</a>
+                    
+                    <h2>Admin Dashboard</h2>
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
