--- a/loginadmin.html
+++ b/loginadmin.html
@@ -76,7 +76,7 @@
                    
                     <li class="toggleable"> <a class="menu-item active" href="javascript:void()">Pages</a>
                       <ul class="sub-menu">
-                        <li><a href="login.html">login</a></li>
+                        <li><a href="login.html">Admin Login</a></li>
                         <li><a href="register.html">register</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
                         <li><a href="coming_soon.html">coming soon</a></li>
@@ -151,7 +151,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
-              <h1 class="title">Login</h1>
+              <h1 class="title">Admin Login</h1>
               <form id="form" method="post" novalidate>
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email" onfocusout="validateEmail()">
