--- a/registeradmin.html
+++ b/registeradmin.html
@@ -138,7 +138,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
-              <h1 class="title">Register</h1>
+              <h1 class="title">Admin Register</h1>
 
 
               
