--- a/shop_cart.html
+++ b/shop_cart.html
@@ -238,7 +238,7 @@
         <form action="" method="post">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
-              <h2 class="form-title">Billing details</h2>
+              <h2 class="form-title">Delivery details</h2>
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="inputFirstName">First Name*</label>
