checkout : added paystack

--- a/Homepage.html
+++ b/Homepage.html
@@ -43,8 +43,16 @@
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision">
                     </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
 
-                <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Logout
-                </a></div>
+
+                <div id="user">
+                  
+                </div>
+
+
+                <div class="login d-flex" id="loginflex">
+
+                  <a href="login.html"><i class="fas fa-user"></i>Logout</a>
+                </div>
               </div>
             </div>
           </div>
