checkout : added paystack

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                 <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision">
-                    </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                    </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
 
                 <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Login or Sign
                     Up</a></div>
@@ -151,7 +151,7 @@
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                        class="fab fa-pinterest-p"> </i></a></div>
+                        class="fab fa-instagram-p"> </i></a></div>
                 </div>
                 <div class="ogamin-mobile-menu_bg"></div>
               </div>
@@ -740,7 +740,7 @@
             <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                 class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                   class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                  class="fab fa-pinterest-p"></i></a></div>
+                  class="fab fa-instagram-p"></i></a></div>
           </div>
           <div class="col-md-8">
             <div class="row">
