--- a/shop_cart.html
+++ b/shop_cart.html
@@ -102,7 +102,7 @@
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                        class="fab fa-pinterest-p"> </i></a></div>
+                        class="fab fa-instagram-p"> </i></a></div>
                 </div>
                 <div class="ogamin-mobile-menu_bg"></div>
               </div>
@@ -329,7 +329,7 @@
             <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                 class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                   class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                  class="fab fa-pinterest-p"></i></a></div>
+                  class="fab fa-instagram-p"></i></a></div>
           </div>
           <div class="col-md-8">
             <div class="row">
