--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -43,7 +43,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
-            <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+            <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
             <div class="language">
               <div class="selected-language"><img src="assets/images/homepage01/usa.jpg" alt="">English<i class="arrow_carrot-down"></i>
                 <ul class="list-language">
@@ -147,7 +147,7 @@
             <div class="mobile-login">
               <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
             </div>
-            <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+            <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
           </div>
           <div class="ogamin-mobile-menu_bg"></div>
         </div>
