checkout : added paystack

--- a/login.html
+++ b/login.html
@@ -39,6 +39,13 @@
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                   <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
                 
+
+
+
+                  <div id="user">
+                  
+                  </div>
+
                   <div class="login d-flex"><a href="register.html"><i class="fas fa-user"></i>SignUp</a></div>
                 </div>
               </div>
