checkout : added paystack

--- a/Homepage.html
+++ b/Homepage.html
@@ -43,6 +43,12 @@
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision">
                     </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
 
+                <div id="form">
+                  
+                </div>
+
+
+
 
                 <div id="user">
                   
