checkout : added paystack

--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
-                  <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
+                  <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   
                   <div class="login d-flex"><a href="login.html"><i class="fas fa-user"></i>Login</a></div>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="mobile-login">
                       <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
                     </div>
-                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
+                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   </div>
                   <div class="ogamin-mobile-menu_bg"></div>
                 </div>
@@ -198,7 +198,7 @@
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                     class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                    class="fab fa-instagram-p"></i></a></div>
+                    class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
