--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -94,7 +94,7 @@
                     <div class="mobile-login">
                       <h2>My account</h2><a href="login.html">Logout</a>
                     </div>
-                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram-p"> </i></a></div>
+                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   </div>
                   <div class="ogamin-mobile-menu_bg"></div>
                 </div>
@@ -279,7 +279,7 @@
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                     class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                    class="fab fa-instagram-p"></i></a></div>
+                    class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
