--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -38,7 +38,7 @@
                 class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                 <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                      class="fab fa-instagram-p"> </i></a></div>
+                      class="fab fa-instagram"> </i></a></div>
 
               </div>
             </div>
@@ -81,7 +81,7 @@
 
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                        class="fab fa-instagram-p"> </i></a></div>
+                        class="fab fa-instagram"> </i></a></div>
                 </div>
                 <div class="ogamin-mobile-menu_bg"></div>
               </div>
@@ -220,7 +220,7 @@
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                     class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                    class="fab fa-instagram-p"></i></a></div>
+                    class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-lg-8 col-xl-9">
               <div
