--- a/Homepage.html
+++ b/Homepage.html
@@ -41,7 +41,7 @@
                 class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                 <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision">
-                    </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                    </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
 
                 <div id="form">
                   
@@ -147,7 +147,7 @@
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                        class="fab fa-pinterest-p"> </i></a></div>
+                        class="fab fa-instagram"> </i></a></div>
                 </div>
                 <div class="ogamin-mobile-menu_bg"></div>
               </div>
@@ -722,7 +722,7 @@
             <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                 class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                   class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                  class="fab fa-pinterest-p"></i></a></div>
+                  class="fab fa-instagram"></i></a></div>
           </div>
           <div class="col-md-8">
             <div class="row">
