--- a/about_us.html
+++ b/about_us.html
@@ -33,7 +33,7 @@
               </div>
               <div class="col-12 col-md-6">
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
-                  <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                  <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                 
                   </div>
               </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="mobile-login">
                     </div>
-                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   </div>
                   <div class="ogamin-mobile-menu_bg"></div>
                 </div>
@@ -262,7 +262,7 @@
                     <div class="farmer-contact">
                       <h2>Katie Harrison</h2>
                       <h5>BARBER</h5>
-                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"></i></a></div>
+                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"></i></a></div>
                     </div>
                   </div>
                 </div>
@@ -274,7 +274,7 @@
                     <div class="farmer-contact">
                       <h2>Katie Harrison</h2>
                       <h5>BARBER</h5>
-                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"></i></a></div>
+                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"></i></a></div>
                     </div>
                   </div>
                 </div>
@@ -286,7 +286,7 @@
                     <div class="farmer-contact">
                       <h2>Katie Harrison</h2>
                       <h5>BARBER</h5>
-                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"></i></a></div>
+                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"></i></a></div>
                     </div>
                   </div>
                 </div>
@@ -298,7 +298,7 @@
                     <div class="farmer-contact">
                       <h2>Katie Harrison</h2>
                       <h5>BARBER</h5>
-                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"></i></a></div>
+                      <div class="farmer-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"></i></a></div>
                     </div>
                   </div>
                 </div>
@@ -322,7 +322,7 @@
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                     class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                    class="fab fa-pinterest-p"></i></a></div>
+                    class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
