--- a/coming_soon.html
+++ b/coming_soon.html
@@ -29,7 +29,7 @@
             <div class="d-flex justify-content-center" id="event-countdown"></div>
             <div class="follow-us">
               <h5>Follow Us For Updates</h5>
-              <div class="social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-pinterest-p"></i></a></div>
+              <div class="social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-instagram"></i></a></div>
             </div>
           </div>
         </div>
