--- a/contact_us.html
+++ b/contact_us.html
@@ -90,7 +90,7 @@
                     <div class="mobile-login">
                       <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
                     </div>
-                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
+                    <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   </div>
                   <div class="ogamin-mobile-menu_bg"></div>
                 </div>
@@ -348,7 +348,7 @@
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
                     class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
-                    class="fab fa-pinterest-p"></i></a></div>
+                    class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
