checkout : added paystack

--- a/Homepage.html
+++ b/Homepage.html
@@ -101,7 +101,7 @@
                 <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                   <i class="fa fa fa-shopping-cart"></i>
                   <sup style="top: -.5em">
-                    <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                    <span id="cartButtonBadge" class="cartButtonBadge my-badge badge-success">0</span>
                   </sup>
                 </div>
               </div>
@@ -162,7 +162,7 @@
                   <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover mobile-product_function d-flex align-items-center justify-content-end">
                     <i class="fa fa fa-shopping-cart"></i>
                     <sup style="top: -.5em">
-                      <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                      <span id="cartButtonBadge" class="cartButtonBadge my-badge badge-success">0</span>
                     </sup>
               </div>
               </div>
