cart to database

--- a/shop_cart.html
+++ b/shop_cart.html
@@ -159,12 +159,15 @@
                   </div>
                 </div>
                 <div class="col-12 col-md-4">
+                <a href="shop_order_complete.html">
                   <div class="step-block">
                     <div class="step">
                       <h2>Order Completed</h2><span>02</span>
                     </div>
                   </div>
                 </div>
+
+                </a>
                 
               </div>
             </div>
@@ -265,7 +268,7 @@
                 </select>
               </div>
               <div class="form-group">
-                <label for="inputStreet"><h2 class="form-title">Shipping Address*</h2></label>
+                <label for="inputStreet"><h2 class="form-title">Delivery Address*</h2></label>
                 <input class="no-round-input-bg" id="inputStreet" type="text" required>
               </div>
               <div class="form-group">
@@ -290,6 +293,8 @@
               </div>
                 
               <div class="form-group">
+
+              <!order deleivery note>
                 <label for="inputNote">Order notes (optional)</label>
                 <textarea class="textarea-form-bg" id="inputNote" name="" cols="30" rows="7"></textarea>
               </div>
