--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -153,12 +153,14 @@
               <div class="order-step_block">
                   <div class="row no-gutters">
                     <div class="col-12 col-md-4">
+                      <a href="shop_cart.html">
                       <div class="step-block">
                         <div class="step">
                           
                           <h2>Shopping Cart</h2><span>01</span>
                         </div>
                       </div>
+                      </a>
                     </div>
                     <div class="col-12 col-md-4">
                       <div class="step-block active">
@@ -508,7 +510,7 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="inputStreet"><h2 class="form-title">Shipping Address*</h2></label>
+                  <label for="inputStreet"><h2 class="form-title">Delivery Address*</h2></label>
                   <input class="no-round-input-bg" id="inputStreet" type="text" required>
                 </div>
                 <div class="form-group">
